<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">


  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_marginBottom="75dp"
      android:elevation="5dp"
      android:src="@drawable/town"
      app:layout_constraintBottom_toBottomOf="@+id/cardview"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <View

      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:background="@drawable/cloud"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardview"
      android:layout_width="300dp"
      android:layout_height="100dp"
      android:layout_marginTop="250dp"
      android:elevation="4dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="1dp"
      app:layout_constraintBottom_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

      <EditText
          android:hint="@string/hint"
          android:id="@+id/search_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="25dp" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/cardview2"
      android:layout_width="match_parent"
      android:layout_height="330dp"
      android:elevation="4dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="1dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#D3D3D3"
        android:weightSum="10">

      <GridLayout
          android:id="@+id/mainGrid"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="8"
          android:alignmentMode="alignMargins"
          android:columnCount="2"
          android:columnOrderPreserved="false"
          android:rowCount="3">

        <!-- ROW 1  -->
        <!-- COLUMN 1  -->


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/max_temp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/min_temp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


        <!-- ROW 2  -->
        <!-- COLUMN 1  -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"

              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/w_speed"
                android:layout_marginLeft="45dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/w_direction"
                android:layout_marginLeft="45dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


        <!-- ROW 3  -->
        <!-- COLUMN 1  -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"

              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/weather"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/next_day"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/next_day_weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


          </LinearLayout>


        </androidx.cardview.widget.CardView>


      </GridLayout>

      <Button
          android:textColor="@color/colorAccent"
          android:id="@+id/change"
          android:text="@string/change_Language"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>


    </LinearLayout>
  </androidx.cardview.widget.CardView>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floating_search"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="40dp"
      android:src="@drawable/ic_search"
      app:layout_constraintBottom_toBottomOf="@+id/cardview"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/cardview"
      app:layout_constraintVertical_bias="0.0"
      android:layout_marginRight="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>